[gd_scene load_steps=3 format=3 uid="uid://cabmk6meut82v"]

[ext_resource type="Script" uid="uid://dy6j17lfsvpn0" path="res://scenes/ui/player_ui.gd" id="1_s4ogp"]
[ext_resource type="PackedScene" uid="uid://dtn1mllcun20w" path="res://scenes/ui/vignette.tscn" id="2_2sf84"]

[node name="PlayerUI" type="CanvasLayer"]
script = ExtResource("1_s4ogp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/separation = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.280086, 1, 0.254727, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24
text = "Health: 3/3"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PaddleCountLabel" type="Label" parent="VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 0.335514, 0.269596, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24
text = "Paddles: 3/3 "
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DashCountLabel" type="Label" parent="VBoxContainer/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.548198, 0.695398, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24
text = "Dashes: 3/3 "
horizontal_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ChargePercentLabel" type="Label" parent="VBoxContainer/MarginContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.996782, 0.661648, 0.498117, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24
text = "Charge: 0%"
horizontal_alignment = 1

[node name="Vignette" parent="." instance=ExtResource("2_2sf84")]
unique_name_in_owner = true
